--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:src="@drawable/strangers_cover_art"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/btnChangeUser"
         app:layout_constraintBottom_toTopOf="@id/tvSongName"
         app:layout_constraintVertical_bias="0.5" />
@@ -85,7 +84,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintRight_toLeftOf="@id/btnPlay"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:contentDescription="Previous" />
 
     <ImageButton
         android:id="@+id/btnPlay"
@@ -98,7 +98,8 @@
         app:layout_constraintBottom_toBottomOf="@id/btnPrevious"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintLeft_toRightOf="@id/btnPrevious"
-        app:layout_constraintRight_toLeftOf="@id/btnNext" />
+        app:layout_constraintRight_toLeftOf="@id/btnNext"
+        android:contentDescription="Play" />
 
     <ImageButton
         android:id="@+id/btnNext"
@@ -111,18 +112,17 @@
         app:layout_constraintBottom_toBottomOf="@id/btnPlay"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintLeft_toRightOf="@id/btnPlay"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:contentDescription="Next" />
 
     <EditText
         android:id="@+id/etUserName"
-        android:layout_width="146dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:hint="IronMan"
-        app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toTopOf="@id/tvUserName"
+        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
+        app:layout_constraintLeft_toLeftOf="@id/tvUserName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
