--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,65 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/overall_padding"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="IronMan"
+        android:text="@string/username"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/btnChangeUser"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnChangeUser"
         app:layout_constraintVertical_bias="0.5" />
 
+    <EditText
+        android:id="@+id/etUserName"
+        android:layout_width="@dimen/zero_dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
+        app:layout_constraintLeft_toLeftOf="@id/tvUserName"
+        app:layout_constraintRight_toLeftOf="@id/btnChangeUser"
+        app:layout_constraintTop_toTopOf="@id/tvUserName"
+        android:autofillHints="Enter username" />
+
     <Button
         android:id="@+id/btnChangeUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change user"
+        android:text="@string/change_user"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="etUserName, tvUserName, btnChangeUser" />
+
     <ImageView
         android:id="@+id/ivAlbumCover"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/zero_dp"
+        android:layout_height="@dimen/zero_dp"
         android:scaleType="centerCrop"
         android:src="@drawable/mingyuetianya_cover"
-        app:layout_constraintBottom_toTopOf="@id/tvSongName"
-        app:layout_constraintDimensionRatio="1"
+        android:foreground="?selectableItemBackground"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnChangeUser"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/barUserName"
+        app:layout_constraintBottom_toTopOf="@id/barPlayButtons"
+        app:layout_constraintVertical_bias="0.1"
+        android:contentDescription="@string/album_cover" />
 
     <TextView
         android:id="@+id/tvSongName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="明月天涯"
+        android:text="@string/song_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/barPlayButtons"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
-
-    <TextView
-        android:id="@+id/tvPlaysNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="number plays"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSinger" />
+        app:layout_constraintTop_toBottomOf="@id/ivAlbumCover"
+        app:layout_constraintVertical_bias="0.1"/>
 
     <TextView
         android:id="@+id/tvSinger"
@@ -70,19 +79,33 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="五音JW"
+        android:text="@string/singer_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/darkBlue"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvSongName" />
+
+    <TextView
+        android:id="@+id/tvPlaysNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/number_plays"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/darkPurple"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSinger"
+        app:layout_constraintBottom_toTopOf="@id/barPlayButtons"/>
 
     <ImageButton
         android:id="@+id/btnPrevious"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:contentDescription="Previous"
+        android:contentDescription="@string/skip_to_previous"
         android:foreground="?selectableItemBackground"
         android:src="@drawable/ic_previous"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:contentDescription="Play"
+        android:contentDescription="@string/play"
         android:foreground="?selectableItemBackground"
         android:src="@drawable/ic_play"
         app:layout_constraintBottom_toBottomOf="@id/btnPrevious"
@@ -110,7 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:contentDescription="Next"
+        android:contentDescription="@string/skip_to_next"
         android:foreground="?selectableItemBackground"
         android:src="@drawable/ic_next"
         app:layout_constraintBottom_toBottomOf="@id/btnPlay"
@@ -119,14 +142,11 @@
         app:layout_constraintTop_toTopOf="@id/btnPlay"
         app:layout_constraintVertical_bias="0.5" />
 
-    <EditText
-        android:id="@+id/etUserName"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barPlayButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
-        app:layout_constraintLeft_toLeftOf="@id/tvUserName"
-        app:layout_constraintTop_toTopOf="@id/tvUserName" />
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="btnNext, btnPlay, btnPrevious" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
