--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="darkGreen">#009688</color>
+    <color name="darkBlue">#3F51B5</color>
+    <color name="darkPurple">#9C27B0</color>
+    <color name="black">#000000</color>
 </resources>
