--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,12 +66,12 @@
         android:layout_height="wrap_content"
         android:text="@string/song_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@id/barPlayButtons"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivAlbumCover"
-        app:layout_constraintVertical_bias="0.1"/>
+        app:layout_constraintBottom_toTopOf="@id/tvSinger"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
     <TextView
         android:id="@+id/tvSinger"
@@ -85,6 +85,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvPlaysNum"
         app:layout_constraintTop_toBottomOf="@id/tvSongName" />
 
     <TextView
@@ -97,6 +98,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/barPlayButtons"
         app:layout_constraintTop_toBottomOf="@id/tvSinger" />
 
     <ImageButton
@@ -107,10 +109,11 @@
         android:contentDescription="@string/skip_to_previous"
         android:foreground="?selectableItemBackground"
         android:src="@drawable/ic_previous"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btnPlay"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btnPlay"
-        app:layout_constraintTop_toBottomOf="@id/tvPlaysNum"
+        app:layout_constraintTop_toTopOf="@id/btnPlay"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintVertical_bias="0.5" />
 
     <ImageButton
@@ -121,10 +124,10 @@
         android:contentDescription="@string/play"
         android:foreground="?selectableItemBackground"
         android:src="@drawable/ic_play"
-        app:layout_constraintBottom_toBottomOf="@id/btnPrevious"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/btnPrevious"
         app:layout_constraintRight_toLeftOf="@id/btnNext"
-        app:layout_constraintTop_toTopOf="@id/btnPrevious"
+        app:layout_constraintTop_toBottomOf="@id/tvPlaysNum"
         app:layout_constraintVertical_bias="0.5" />
 
     <ImageButton
