--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="@id/tvUserName"
-        app:layout_constraintLeft_toLeftOf="@id/tvUserName"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btnChangeUser"
         app:layout_constraintTop_toTopOf="@id/tvUserName"
         android:autofillHints="Enter username" />
