--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -6,4 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".SongListActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSongs"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/barSelectedSongs"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_song"/>
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barSelectedSongs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="tvSelectedSongName, btnShuffle"/>
+
+    <TextView
+        android:id="@+id/tvSelectedSongName"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="@id/barSelectedSongs"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/btnShuffle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="Song Name"
+        android:textSize="20sp"/>
+
+    <Button
+        android:id="@+id/btnShuffle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/tvSelectedSongName"
+        app:layout_constraintLeft_toRightOf="@id/tvSelectedSongName"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvSelectedSongName"
+        android:text="@string/shuffle"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
