--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -30,4 +30,13 @@
         android:layout_marginStart="16dp"
         android:textSize="20sp"/>
 
+    <TextView
+        android:id="@+id/tvArtistName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Artist name"
+        app:layout_constraintLeft_toLeftOf="@id/tvSongName"
+        app:layout_constraintTop_toBottomOf="@id/tvSongName"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
