--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="darkBlue">#3F51B5</color>
     <color name="darkPurple">#9C27B0</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
