--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -24,19 +24,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/white"
-        app:layout_constraintHorizontal_chainStyle="spread">
+        android:background="@color/white">
 
 
         <TextView
             android:id="@+id/tvSelectedSongInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/btnShuffle"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/btnShuffle"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="Song Name - " />
+            android:layout_marginStart="16dp"
+            tools:text="Song Name - Artist Name"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
         <Button
             android:id="@+id/btnShuffle"
@@ -45,8 +47,8 @@
             android:text="@string/shuffle"
             app:layout_constraintBottom_toBottomOf="@id/tvSelectedSongInfo"
             app:layout_constraintLeft_toRightOf="@id/tvSelectedSongInfo"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvSelectedSongInfo" />
+            app:layout_constraintTop_toTopOf="@id/tvSelectedSongInfo"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
