--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -20,23 +20,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/miniPlayer"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/default_height_width"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:elevation="5dp"
+        android:elevation="@dimen/elevation"
         android:foreground="?selectableItemBackground"
         android:background="@color/white">
 
         <TextView
             android:id="@+id/tvSelectedSongInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/btnShuffle"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toStartOf="@id/btnShuffle"
+            android:layout_marginStart="@dimen/default_margin"
             tools:text="Song Name - Artist Name"
             android:maxLines="1"
             android:ellipsize="end"/>
