--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="overall_padding">16dp</dimen>
     <dimen name="zero_dp">0dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_height_width">60dp</dimen>
+    <dimen name="large_text">20sp</dimen>
+    <dimen name="elevation">5dp</dimen>
 </resources>
