--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -13,7 +13,7 @@
         android:id="@+id/ivSongImage"
         android:layout_width="@dimen/default_height_width"
         android:layout_height="@dimen/default_height_width"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/unknown"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
