--- a/app/src/main/res/layout/fragment_song_detail.xml
+++ b/app/src/main/res/layout/fragment_song_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/overall_padding"
+    android:background="@color/white"
     tools:context=".Activities.MainActivity">
 
     <ImageView
@@ -15,6 +16,7 @@
         android:src="@drawable/mingyuetianya_cover"
         android:foreground="?selectableItemBackground"
         app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/barPlayButtons"
