implement requirement part 3

--- a/app/src/main/res/layout-land/activity_song_main.xml
+++ b/app/src/main/res/layout-land/activity_song_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.SongListActivity">
-    
+
     <FrameLayout
         android:id="@+id/fragContainer"
         android:layout_width="0dp"
@@ -20,7 +20,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/miniPlayer"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/default_height_width"
+        android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,6 +39,7 @@
             app:layout_constraintEnd_toStartOf="@id/btnShuffle"
             android:layout_marginStart="@dimen/default_margin"
             tools:text="Song Name - Artist Name"
+            android:textSize="@dimen/large_text"
             android:maxLines="1"
             android:ellipsize="end"/>
 
@@ -46,11 +47,13 @@
             android:id="@+id/btnShuffle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="@dimen/overall_padding"
             android:text="@string/shuffle"
             app:layout_constraintBottom_toBottomOf="@id/tvSelectedSongInfo"
             app:layout_constraintLeft_toRightOf="@id/tvSelectedSongInfo"
             app:layout_constraintTop_toTopOf="@id/tvSelectedSongInfo"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="@dimen/large_text"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
