--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="default_margin">16dp</dimen>
     <dimen name="default_height_width">60dp</dimen>
     <dimen name="large_text">20sp</dimen>
+    <dimen name="large_text_land">24sp</dimen>
     <dimen name="elevation">5dp</dimen>
 </resources>
