--- a/app/src/main/res/layout/fragment_song_detail.xml
+++ b/app/src/main/res/layout/fragment_song_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/overall_padding"
     android:background="@color/white"
-    tools:context=".Activities.MainActivity">
+    tools:context=".activities.MainActivity">
 
     <ImageView
         android:id="@+id/ivAlbumCover"
