--- a/app/src/main/res/layout/fragment_song_detail.xml
+++ b/app/src/main/res/layout/fragment_song_detail.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:padding="@dimen/overall_padding"
     android:background="@color/white"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".activities.MainActivity">
 
     <ImageView
